# chargepal_description

./: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
_bullet_urdf_autogen/: primitive_adapter_station.urdf  primitive_chargepal_with_fix_plug.urdf  primitive_chargepal_with_fix_rod.urdf  primitive_chargepal_with_gripper.urdf
_bullet_urdf_models/: adapter_station_octa_socket.urdf  adapter_station_square_socket.urdf  ccs_socket_wall.urdf  chargepal_testbed.urdf  chargepal_testbed_cic.urdf  chargepal_testbed_cic_type2.urdf  chargepal_testbed_fix_rod.urdf  chargepal_testbed_tdt.urdf  cpm_fix_rod_30.urdf  cpm_fix_rod_32d5.urdf  cpm_fix_rod_34.urdf  cpm_fix_rod_34d5.urdf  fix_rod_30.urdf  primitive_adapter_station.urdf  primitive_chargepal_with_fix_plug.urdf  tdt_socket.urdf  testbed_table.urdf  testbed_table_cic.urdf  ur10e.urdf  ur10e_ccs_type2.urdf  ur10e_fix_plug.urdf
config/: BeeBee10.rviz  BeeBee5.rviz  env.rviz  robot.rviz
config/ur10e/: joint_limits.yaml
launch/: test_robot_urdf.launch  test_urdf.launch  upload_urdf_to_param_server.launch
launch/robot_specific_urdf/: upload_ur5_urdf.launch
launch/test/: build_env.launch  build_robot.launch  build_robots.launch  robot.launch  robots.launch
launch/utils/: add_on_nodes.launch
meshes/testbed/: base_plate_ur10e.dae  (+1 more)
scripts/: mujoco_urdf_autogen.py  pybullet_urdf_autogen.py  pybullet_vhacd.py  urdf_autogen.py  xml_utils.py
urdf/: stand.urdf.xacro  ur10.urdf.xacro  ur10_on_stand.urdf.xacro  ur10e.urdf.xacro  ur10e_on_stand.urdf  ur10e_on_stand.urdf.xacro  ur5.urdf.xacro  ur5_on_stand.urdf.xacro
(+55 files in other folders)
